--- a/package.json
+++ b/package.json
@@ -24,14 +24,12 @@
     "axios": "^0.17.1",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.8.0",
     "express": "^4.15.4",
-    "jquery": "^3.2.1",
-    "moment": "^2.19.2",
-    "mongoose": "^4.11.6",
-    "mysql": "^2.14.1",
+    "moment": "^2.24.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "underscore": "^1.8.3"
+    "react-chartjs-2": "^2.7.6",
+    "react-dom": "^15.6.1"
   },
   "bugs": {
     "url": "https://github.com/tomcernera/Cryptocurrency-Charting-Tool-Mini-App/issues"
