--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/index.js",
-    "dev:react": "webpack -d --watch"
+    "dev:react": "npx webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,8 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-cli": "^3.3.5"
   },
   "dependencies": {
     "axios": "^0.17.1",
